--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
@@ -51,7 +52,7 @@
 
         </div>
         <div class="square ">
-          <img class="IMA"    src="image/b65b0c75c9d5b3f2e76e3c1dba4dfad4.jpeg" alt="" style="width: 50%">
+          <img class="IMA"    src="image/b65b0c75c9d5b3f2e76e3c1dba4dfad4.jpeg" alt="" >
         </div>
 
       </div>
@@ -63,7 +64,7 @@
     <div class="list">
       <div class="left">
         <h1> DO YOU KNOW WE CAN PROVIDE FOR YOU?</h1>
-        <p class="left text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        <p class="left_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
           nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
