--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
       </div>
 
     </div>
-
     <div class="white">
     <div class="list">
       <div class="left">
@@ -121,7 +120,6 @@
     </div>
       <div class="line"> </div>
     </div>
-
     <div class="content">
       <div class="animation">
         <h1 class="animation">FEATURE PRODUCTS</h1>
@@ -156,6 +154,52 @@
 </div>
 
 
+    </div>
+    <div class="last">
+      <div class="small_block">
+        <div class="last_wrapper">
+          <div class="firs">
+            <h1 class="first_h"> MEET OUR TEAM</h1>
+            <p class="first_p">Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy
+              text ever since the 1500s, when an unknown printer
+            </p>
+
+
+          </div>
+          <div class="line"></div>
+        </div>
+        <div class="empty "> </div>
+      </div>
+      <div class="bog_block">
+      <div class="block">
+        <div class="big_block"></div>
+        <div CLASS="right_block_u">
+        <div class="right_block">
+          <h1 class="mark">MARK WAUGH</h1>
+          <p class="mark">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam </p>
+          <ul class="mark">
+            <li class="mark ">wef</li>
+            <li class="mark ">ef</li>
+            <li class="mark ">fwef</li>
+            <li class="mark ">wefwe</li>
+          </ul>
+
+
+        </div>
+          <div class="square_two_big">
+          <div class="square_two"></div>
+          <div class="square_two"></div>
+          <div class="square_two"></div>
+          <div class="square_two"></div>
+        </div>
+        </div>
+        </div>
+      </div>
+    </div>
     </div>
   </div>
 
